  - in emaj_set_mark_group() and emaj_set_mark_groups() functions, allow to 
    not supply the mark name parameter. In this case, the default mark name 
    is built as MARK_hh.mm.ss.ms, using the current timestamp.
  - in emaj_stop_group() and emaj_stop_groups() functions, if the supplied 
    mark name is NULL or '', it is now transformed into STOP_hh.mm.ss.ms.
  - in rollback functions, trap all exceptions that may happen when the 
    rollback uses autonomous transactions with dblink and set the proper 
    aborted state of the rollback operation in the emaj_rlbk table.

Bug fixes:
  - the emaj_gen_sql_group() and emaj_gen_sql_groups() functions now properly  
    generate an error if the "list of tables/sequences to filter" parameter 
    is empty.

1.3.0
------
Enhancements:
  - two new functions, emaj_protect_group() and emaj_unprotect_group(), 
    respectively set and unset a specific lock on a group. When such a lock 
    is set on a group, any rollback attempt on this group returns an error. 
    Protecting a group is only meaningfull and thus possible if it is not an 
    audit_only group and if it is in logging state. Stopping a protected 
    group resets the protection.
  - two other new functions, emaj_protect_mark_group() and 
    emaj_unprotect_mark_group(), respectively set and unset a specific lock 
    on a mark for a group. When such a lock is set on a mark for a group, 
    any rollback attempt that would jump over the mark returns an error. This 
    concerns both logged and unlogged rollbacks. Protecting a mark is only 
    possible if its related group is not an audit_only group and if it is in 
    logging state. Stopping a group resets the protection set on its marks.
  - change the name of log and truncate triggers set by E-Maj on application 
    tables. The triggers now have the same name for all tables, respectively 
    emaj_log_trg and emaj_trunc_trg.
  - remove the execute rights granted to emaj_viewer role. It is useless, 